<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_account_balance_wallet"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_receipt_long"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>